--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,16 @@
+name: CI
 
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build-and-push:
+    name: "Build and Push"
+    runs-on: ubuntu-latest
+
+    steps:
+      # Recuperar o código
+      - name: Checkout
+        uses: actions/checkout@v4
