--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,13 @@
+# CI Workflow for building and pushing a Docker image
+#
+# This workflow is triggered on push events to the `main` branch.
+# It builds a Docker image using the `docker build` command and pushes it to a registry.
+#
+# Example:
+# This workflow can be used to automate the build and deployment of a Go application.
+# For example, if you have a Go application in the `main` branch of your repository,
+# this workflow will build a Docker image with the latest code changes and push it to a registry.
+
 name: CI
 
 on:
@@ -12,8 +22,10 @@ jobs:
 
     steps:
       # Recuperar o código
+      # Checkout the code in the repository
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Build a Docker image with the latest code changes
       - name: "Build docker image"
         run: docker build -t carllos166/nlw-devops-go:latest .
