--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,11 +33,18 @@ jobs:
           SHA=${GITHUB_SHA:0:7}
           echo "sha=$SHA" >> $GITHUB_OUTPUT
 
+        #logar n ocontainer registry
+      - name: Login into the cointainer registry
+        uses: docker/login-action@v3
+        with:
+          username: ${ {secrets.DOCKERHUB_USERNAME} }
+          password: ${ {secrets.DOCKERHUB_TOKEN} }
+
       # Build a Docker image with the latest code changes
       - name: "Build docker image"
         # Recuperar SHA pela ID do step responsável, outputs acessando a varíavel criada sha
         run: docker build -t carllos166/nlw-devops-go:${{ steps.generate_sha.outputs.sha }} .
         
 
-      #logar n ocontainer registry
+
       #enviar imagem após
