--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,28 +23,31 @@ jobs:
     steps:
       # Recuperar o código
       # Checkout the code in the repository
-      - name: Checkout
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
       #gerar tag de acordo com commit
-      - name: Generate SHA
-        id: generate_sha
-        run: |
-          SHA=${GITHUB_SHA:0:7}
-          echo "sha=$SHA" >> $GITHUB_OUTPUT
+    - name: Generate SHA
+      id: generate_sha
+      run: |
+        SHA=${GITHUB_SHA:0:7}
+        echo "sha=$SHA" >> $GITHUB_OUTPUT
 
-        #logar n ocontainer registry
-      - name: Login into the cointainer registry
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      #logar n ocontainer registry
+    - name: Login into the cointainer registry
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build a Docker image with the latest code changes
-      - name: "Build docker image"
-        # Recuperar SHA pela ID do step responsável, outputs acessando a varíavel criada sha
-        run: docker build -t carllos166/nlw-devops-go:${{ steps.generate_sha.outputs.sha }} .
-        
+    # Build a Docker image with the latest code changes
+    - name: "Build docker image"
+      # Recuperar SHA pela ID do step responsável, outputs acessando a varíavel criada sha
+      run: docker build -t carllos166/nlw-devops-go:${{ steps.generate_sha.outputs.sha }} .
 
-
-      #enviar imagem após
+    #enviar imagem após
+    - name: "Push docker image"
+      run: |
+        docker push carllos166/nlw-devops-go:${{ steps.generate_sha.outputs.sha }}
+        docker tag carllos166/nlw-devops-go:${{ steps.generate_sha.outputs.sha }} carllos166/nlw-devops-go:latest
+        docker push carllos166/nlw-devops-go:latest
