--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Generate SHA
       id: generate_sha
       run: |
-        SHA=${echo GITHUB_SHA:0:7}
+        SHA=${GITHUB_SHA:0:7}
         echo "sha=$SHA" >> $GITHUB_OUTPUT
 
       #logar n ocontainer registry
